Fix footer spacing

--- a/style.scss
+++ b/style.scss
@@ -536,6 +536,7 @@ table {
     }
 
     footer {
+        bottom: 10px;
         max-width: 200px;
     }
 }
